log/build_2026-03-03_11-19-23/orion_mtc/stdout_stderr.log
Consolidate compiler generated dependencies of target mtc_node
[ 50%] Building CXX object CMakeFiles/mtc_node.dir/src/mtc_node.cpp.o
/home/huzy/My_orion/src/orion_mtc/src/mtc_node.cpp: In member function ‘void OrionMTCTaskNode::applyAllowCollisionObjectHand()’:
/home/huzy/My_orion/src/orion_mtc/src/mtc_node.cpp:192:14: error: ‘using PlanningScene = struct moveit_msgs::msg::PlanningScene_<std::allocator<void> >’ {aka ‘struct moveit_msgs::msg::PlanningScene_<std::allocator<void> >’} has no member named ‘header’
  192 |   scene_diff.header.stamp = node_->now();
      |              ^~~~~~
/home/huzy/My_orion/src/orion_mtc/src/mtc_node.cpp:193:14: error: ‘using PlanningScene = struct moveit_msgs::msg::PlanningScene_<std::allocator<void> >’ {aka ‘struct moveit_msgs::msg::PlanningScene_<std::allocator<void> >’} has no member named ‘header’
  193 |   scene_diff.header.frame_id = "base_link";
      |              ^~~~~~
gmake[2]: *** [CMakeFiles/mtc_node.dir/build.make:76：CMakeFiles/mtc_node.dir/src/mtc_node.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:137：CMakeFiles/mtc_node.dir/all] 错误 2
gmake: *** [Makefile:146：all] 错误 2
